--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
       {
-        "source": "/v1/:path*",
+        "source": "/:path*",
         "destination": "/api/:path*"
       }
     ]
